upgrade README.md "sass-rails", "~> 5.0" ==> "sass-rails", "> 5.0"

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ gemfile:
   - gemfiles/Gemfile.rails-5-0-stable
   - gemfiles/Gemfile.rails-5-1-stable
   - gemfiles/Gemfile.rails-5-2-stable
+  - gemfiles/Gemfile.rails-6-0-stable
 
 matrix:
   exclude:
